force-app/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__ConnectedAppAudienceURL__c.field-meta.xml
<CustomField>
    <fullName>SDOC__ConnectedAppAudienceURL__c</fullName>
    <label>ConnectedAppAudienceURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>