force-app/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Log_Enabled_Users__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Log_Enabled_Users__c</fullName>
    <description>Users with SDoc logging enabled</description>
    <inlineHelpText>Enter a comma separated list of UserNames to enable SDoc logging</inlineHelpText>
    <label>Log Enabled Users</label>
    <type>TextArea</type>
</CustomField>