force-app/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Log_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Log_Expiration_Date__c</fullName>
    <description>SDoc log expiration date</description>
    <label>Log Expiration Date</label>
    <type>DateTime</type>
</CustomField>