force-app/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__LogLevel__c.field-meta.xml
<CustomField>
    <fullName>SDOC__LogLevel__c</fullName>
    <defaultValue>&quot;NONE&quot;</defaultValue>
    <description>Level for logging in execution of SDOC code. Invalid values automatically default Logging Level to &quot;NONE&quot;.</description>
    <inlineHelpText>Acceptable values: NONE, ERROR, WARN, INFO, DEBUG, FINE, FINER, FINEST</inlineHelpText>
    <label>LogLevel</label>
    <length>6</length>
    <type>Text</type>
</CustomField>