force-app/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Stabilize_URLs_Checked__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Stabilize_URLs_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stabilize URLs Checked (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>